# snaplogic-robotframework-examples

./: .env.example  .gitignore  .travis.yml  Downloads.lnk  Makefile  README.md  TRAVIS_SLACK_SETUP.md  cd-to-template.sh  cookiecutter.json  docker-compose.activemq.yml  docker-compose.groundplex.yml  docker-compose.mysql.yml  docker-compose.oracle.yml  docker-compose.postgres.yml  docker-compose.s3emulator.yml  docker-compose.sqlserver.yml  docker-compose.yml  docker_cleanup.sh  log.html  output.xml  post_test_results_notify.yml  report.html  run-tests.sh  sai_test.txt  setup_env.sh  setup_travis_env.sh
.claude/: CLAUDE.md
README/: DOCUMENTATION_INDEX.md  docker-compose-flow.md  html_documentation_index.md  reference.md  testing_strategy_explanation.md
cookiecutter_template/: cookiecutter.json  system_mappings.json
docker/: .env.ports  docker-compose-with-ports.bat  docker-compose-with-ports.sh  docker-compose.activemq.yml  docker-compose.db2.yml  docker-compose.email-mock.yml  docker-compose.groundplex.yml  docker-compose.kafka.yml  docker-compose.mysql.yml  docker-compose.oracle.yml  docker-compose.postgres.yml  docker-compose.s3emulator.yml  docker-compose.salesforce-mock.yml  docker-compose.sqlserver.yml  docker-compose.yml  (+2 more)
{{cookiecutter.primary_pipeline_name}}/ai/: README.md  pyproject.toml
{{cookiecutter.primary_pipeline_name}}/ai/context/: qa-testing.md
{{cookiecutter.primary_pipeline_name}}/ai/docs/: PROMPTS_EXPLAINED.md
{{cookiecutter.primary_pipeline_name}}/ai/notebooks/: rf-forge-playbook.ipynb
{{cookiecutter.primary_pipeline_name}}/ai/src/rf_forge/: __init__.py  __main__.py  cli.py  report_mode.py  runner.py  skills.py
(+967 files in other folders)
